--- a/modules/1237/pages/cover.adoc
+++ b/modules/1237/pages/cover.adoc
@@ -19,7 +19,7 @@ Ausweisungen & Rottländereien
                  No 10, zu Berenbusch aus
                  g[??]iesenew Plätze zur
                  Vergrößerung seines
-                 Hofroumms unmd Gartens
+                 Hofraums unmd Gartens
 
 
                   betreffend
