--- a/modules/1237/pages/page1.adoc
+++ b/modules/1237/pages/page1.adoc
@@ -19,7 +19,7 @@ andjedachte Beamte, d.d.||1800|Oct|18
 |4 1/2.|dazu gehöriger Bericht +
 von [enant] F||||
 
-|5.|Concept ??? ??? +
+|5.|Concept ??? ??? +||||
 |===
 
 * Designation Actorum -- "Record of proceedings" or "Designation of the records"; or maybe “List of the plaintiffs” or “Designation of parties”  
