--- a/modules/1237/pages/page1.adoc
+++ b/modules/1237/pages/page1.adoc
@@ -10,18 +10,26 @@
 Krückeberg nr:10, zu Beren +
 busch, d.d.|Bburg|1798|Maÿ|29
 
-|2.|des [falsigeer] Be[r][u/n]hst der +
+|2.|Desfalsigeer Bericht der +
 Beamten zu Buckeburg d.d.||1799|Febr|27
 
-|3.|Concept [Canner???]: Rescripts +
+|3.|Concept Cammer: Rescripts +
 andjedachte Beamte, d.d.||1800|Oct|18
 
 |4.|Bericht von denselben Beamten||1800|Oct|18
 
 |4 1/2.|dazu gehöriger Bericht +
-von [enant] F||||
+von Lteutenant Funiz
 
-|5.|Concept ??? ??? +||||
+|5.|Concept Cammer: Rasiripts +
+am die Beamte yu Buckeburg +
+desgle an den Bammewrantu +
+meister Haukmann d.d.||||
+
+|6.|Concept Kaufbriefes der Rentkammer +
+für den Colon Krückeberg nr: 10 +
+zu Berenbusch über einen Platz +
+zur Vergrößerung seines Garkens||Dec|1
 |===
 
 * Designation Actorum -- "Record of proceedings" or "Designation of the records"; or maybe “List of the plaintiffs” or “Designation of parties”  
