--- a/modules/1237/pages/page1.adoc
+++ b/modules/1237/pages/page1.adoc
@@ -25,12 +25,13 @@ von Lteutenant Funiz
 am die Beamte yu Buckeburg +
 desgle an den Bammewrantu +
 meister Haukmann d.d.||||
-
-|6.|Concept Kaufbriefes der Rentkammer +
-für den Colon Krückeberg nr: 10 +
-zu Berenbusch über einen Platz +
-zur Vergrößerung seines Garkens|||Dec|1
 |===
+// 
+// |6.|Concept Kaufbriefes der Rentkammer +
+// für den Colon Krückeberg nr: 10 +
+// zu Berenbusch über einen Platz +
+// zur Vergrößerung seines Garkens|||Dec|1
+// |===
 
 * Designation Actorum -- "Record of proceedings" or "Designation of the records"; or maybe “List of the plaintiffs” or “Designation of parties”  
 * d.d. -- *de dato*, which is Latin for "of the date" or "dated."
