--- a/modules/1237/pages/page1.adoc
+++ b/modules/1237/pages/page1.adoc
@@ -19,12 +19,12 @@ an gedachte Beamte, d.d. ||1800 |Mart |11
 |4. |Bericht von denselben Beamten ||1800 |Oct |18
 
 |4 ½.|dazu gehöriger Bericht +
-von Lieutenant Funck |||||
+von Lieutenant Funck ||||
 
 |5. |Concept Cammer Rescripts +
 an die Beamten zu Bückeburg +
 desgl. an den Cammerwahr- +
-meister Barkmann, d.d. |||||27
+meister Barkmann, d.d. ||||27
 
 |6. |Concept Kaufbrief der Rentkammer +
 für den Colon Krückeberg No. 10 +
