--- a/modules/1237/pages/page1.adoc
+++ b/modules/1237/pages/page1.adoc
@@ -74,16 +74,15 @@ to the aforementioned officials, dated ||1800 |Mar |11
 |4. |Report by the same officials ||1800 |Oct |18
 
 |4½. |Related report +
-by Lieutenant Funck |||||
+by Lieutenant Funck ||||
 
 |5. |Draft of Chancery rescript +
 to the officials at Bückeburg, +
 similarly to the chamber steward +
-Barkmann, dated |||||27
+Barkmann, dated ||||27
 
 |6. |Draft purchase deed by the fiscal office +
 for the colonist Krückeberg No. 10 +
 at Berenbusch, for a plot +
 to enlarge his garden |||Dec |1
-
 |=== 
