--- a/modules/1237/pages/page1.adoc
+++ b/modules/1237/pages/page1.adoc
@@ -32,7 +32,7 @@ zu Berenbusch über einen Platz +
 zur Vergrößerung seines Gartens |||Dec |1
 |===
 
-[Terms Explained]
+.Terms Explained
 ****
 * *Designation Actorum* -- latin for "Record of proceedings" or "Designation of the records"; or or more loosely:
 "List of Proceedings" or "Index of Entries".
