--- a/modules/1237/pages/page1.adoc
+++ b/modules/1237/pages/page1.adoc
@@ -44,9 +44,8 @@ zur Vergrößerung seines Gartens |||Dec |1
 
 +
 So "desfallsiger Bericht" literally means:
-____
-"Report concerning this case" or "pertinent report".
-____
++
+*"Report concerning this case" or "pertinent report"*.
 * *Cammer* is an old spelling of *Kammer*, meaning "chamber" or “chancellery.” *Cammerwahrmeister* (more precisely: *Kammerwahrmeister*)
 refers to a type of chancellery administrator or clerk. 
 * *"Cammerwahrmeister"*, a form of “Kammerwärter” or steward/clerk.
