--- a/modules/1237/pages/page1.adoc
+++ b/modules/1237/pages/page1.adoc
@@ -43,8 +43,7 @@ zur Vergrößerung seines Gartens |||Dec |1
 *** *-ig* – a common adjectival suffix
 
 +
-So "desfallsiger Bericht" literally means: +
-*"Report concerning this case" or "pertinent report"*.
+So "desfallsiger Bericht" literally means: *"Report concerning this case" or "pertinent report"*.
 * *Cammer* is an old spelling of *Kammer*, meaning "chamber" or “chancellery.” *Cammerwahrmeister* (more precisely: *Kammerwahrmeister*)
 refers to a type of chancellery administrator or clerk. 
 * *"Cammerwahrmeister"*, a form of “Kammerwärter” or steward/clerk.
