--- a/modules/1237/pages/page1.adoc
+++ b/modules/1237/pages/page1.adoc
@@ -59,7 +59,8 @@ refers to a type of chancellery administrator or clerk.
 
 |1. |Petition by the colonist +
 Krückeberg No. 10 at Beren- +
-busch, dated |Bburg |1798 |May |29
+busch, dated |Bburg +
+[Bückeburg] |1798 |May |29
 
 |2. |Pertinent report by the +
 officials at Bückeburg, dated ||1799 |Feb |27
