--- a/modules/1237/pages/page1.adoc
+++ b/modules/1237/pages/page1.adoc
@@ -4,7 +4,7 @@
 image::001.png[link=self]
 
 .Transliteration
-[cols="1,7,2,2,2,1"]
+[width="60%",cols="1,7,2,2,2,1"]
 |===
 |Nrus |Designatio Actorum |Amt |Jahre |Monat |Tag
 
