--- a/modules/1237/pages/page1.adoc
+++ b/modules/1237/pages/page1.adoc
@@ -49,7 +49,8 @@ So "desfallsiger Bericht" literally means: *"Report concerning this case" or "pe
 * *Cammer* is an old spelling of *Kammer*, meaning "chamber" or “chancellery.” *Cammerwahrmeister* (more precisely: *Kammerwahrmeister*)
 refers to a type of chancellery administrator or clerk. 
 * *"Cammerwahrmeister"*, a form of “Kammerwärter” or steward/clerk.
-* 
+* *gedacht* means "thought, intended, meant", but in older German "gedacht" also had a very different]
+formal, idiomatic use:aforementioned / above-mentioned. 
 * *Funiz* more closely matches the image, but is not a valid surname.
 * *"desgl."* in row 5 is an abbreviation for *"desgleichen"* (likewise, similarly).
 ****
