--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -13,15 +13,15 @@
 
 |NLA BU, K 2, A Nr. 689
 |Ein dem Colon Krückeberg Nr. 10 in Berenbusch aus Kammerkasse dargeliehenes Kapital von 200 Reichstaler Crt.
-|A capital loan of 200 Reichstaler currency lent from the chamber treasury to the colonist Krückeberg No. 10 in Berenbusch.* |1841 - 1845
+|A capital loan of 200 Reichstaler currency lent from the chamber treasury to the colonist Krückeberg No. 10 in Berenbusch.|1841 - 1845
 
 |NLA BU, L 122, F Nr. 354
 |Konkurs des Jobst Krückeberg [in Bückeburg]
-|Bankruptcy of Jobst Krückeberg [in Bückeburg]*
+|Bankruptcy of Jobst Krückeberg [in Bückeburg]
 |1725 - 1725
 
 |NLA BU, L 20, C Nr. 98
 |Testament der Witwe Hauptmännin Krückeberg
-|Will of the widow, Captain’s wife Krückeberg*
+|Will of the widow, Captain’s wife Krückeberg
 |1793 - 1793
 |===
