--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -1,4 +1,4 @@
-.xref:index.adoc[]
+* xref:index.adoc[]
 //NLA BU, K 2, A Nr. 1237
-* xref:cover.adoc[]
-* xref:page1.adoc[]
+** xref:cover.adoc[]
+** xref:page1.adoc[]
