--- a/modules/1237/pages/index.adoc
+++ b/modules/1237/pages/index.adoc
@@ -1,7 +1,5 @@
 = Document NLA BU, K 2, A Nr. 1237
 
-The document denotated as *NLA BU, K 2, A Nr. 1237* is composed of 12 images received from the Niedersächishces Landesarchiv,
-downloaded TIF images, each about 58MG in size. It is one of five other documents and other research containted in a downloadable
-.zip file. 
-
-Pages with the transliteration and translation of each image will be added over time.
+The document denotated link:https://www.arcinsys.niedersachsen.de/arcinsys/detailAction?detailid=v4978766[NLA BU, K 2, A Nr. 1237]
+is composed of 12 images received from the Niedersächishces Landesarchiv, downloaded TIF images, each about 58MG in size. It is
+one of five other documents and other research containted in a downloadable .zip file. 
