--- a/modules/1237/pages/page1.adoc
+++ b/modules/1237/pages/page1.adoc
@@ -38,7 +38,7 @@ zur Vergrößerung seines Gartens |||Dec |1
 ****
 * *Designation Actorum* -- latin for *"Record of proceedings"* or *"Designation of the records"*; or or more loosely:
 *"List of Proceedings"* or *"Index of Entries"*.
-* d.d. -- *de dato*, which is Latin for "of the date" or "dated."
+* *d.d.* -- *de dato*, which is Latin for "of the date" or "dated."
 * *"desfallsiger"*, meaning *"pertinent"* or *"relating to the matter". Breakdown of the word: 
 ** desfallsig = an adjective made from:
 *** *des Falles* – *"of the case"* (genitive of der Fall)
@@ -51,7 +51,7 @@ refers to a type of chancellery administrator or clerk.
 * *"Cammerwahrmeister"*, a form of “Kammerwärter” or steward/clerk.
 * *gedacht* means "thought, intended, meant", but in older German "gedacht" also had a very different]
 formal, idiomatic use:aforementioned / above-mentioned. 
-* *Funiz* more closely matches the image, but is not a valid surname.
+* *Funck* - *Funiz* more closely matches the image, but is not a valid surname.
 * *"desgl."* in row 5 is an abbreviation for *"desgleichen"* (likewise, similarly).
 ****
 
