--- a/modules/1237/pages/page2.adoc
+++ b/modules/1237/pages/page2.adoc
@@ -23,15 +23,15 @@ Berenbusch, ist
 ein kleiner
 Winkel, der ohne
 allen Nachteil
-ausgewiesen.
+ausgewiesen
 werden kann. — Die darauf stehenden
 Pappelen wären dann von Seiten der Forst
 zu verkaufen, und der Krückeberg hätte sich
 verbindlich zu machen an einem anderen
 Platze im Förste für jeden zu fällende Pappel
-drey Stetz-Stangen wieder zu pflanzen,
-Akkaas forstenste¬
-Nase
+dreÿ Stetz-Stangen wieder zu pflanzen,
+     Nase  [<-- replacement written  below Stetz]
+                                  Akkaas forstenste
 ....
 
 |
