--- a/modules/1237/pages/page2.adoc
+++ b/modules/1237/pages/page2.adoc
@@ -3,18 +3,9 @@
 
 image::002-1-a.png[link=self]
 
-.Explanatary Notes
+.Archival Reference
 ****
-* *Cam: Nr: 662* - *"Chamber [Office] Document No. 662"* or *"File No. 662 of the Fiscal Office"*.
-* Res Can is likely shorthand for the latin *Rescriptum Cammerale*: 
-** *Res* = abbreviation of Rescriptum (a written reply or decree).
-** *Can* = abbreviation of Cammeral or Cammerale (chamber, as in Chancery or administrative office —
-older spelling of Kammer).
-****
-
-
-[.metadata]
-[cols="2,5"]
+[cols="1,3"]
 |===
 |Archive Reference (File No. in the Fiscal Office) | Cam: Nr: 662
 |Document Type     | Res: Cam: (Chamber Rescript)
@@ -23,6 +14,7 @@ older spelling of Kammer).
 |Location          | Amt Bückeburg / Berenbusch
 |Subject           | Land request by Colon Krückeberg (No. 10)
 |===
+****
 
 [cols="a,a"]
 |===
