--- a/modules/1237/pages/page2.adoc
+++ b/modules/1237/pages/page2.adoc
@@ -45,7 +45,7 @@ B. 14. Jun. 1798
             VIIIK
 
 Der verlangte Platz liegt
-in der Dorf-Straße von
+in der Dorf Straße von
 Berenbusch, ist
 ein kleiner
 Winkel, der ohne
@@ -57,11 +57,37 @@ zu verkaufen, und der Krückeberg hätte sich
 verbindlich zu machen an einem anderen
 Platze im Förste für jeden zu fällende Pappel
 dreÿ Stetz-Stangen wieder zu pflanzen,
-     Nase  [<-- marginal note. Written in smaller hand. Meaning unclear]
+     Nase  [<-- marginal note, written smaller; meaning unclear]
                                   Maas forstenste
 ____
 
 |
+[verse]
+____
+Chamber: No. 662.                          No. 1.
+Chamber rescript:
+
+regarding the forestry office report.     presented: 30 May 1798.
+Received: 14 June 1798
+
+            VIII K
+
+The requested plot lies
+on the village street of
+Berenbusch. It is
+a small
+corner that can be
+designated
+without any disadvantage. — The poplar trees standing on it
+would then be sold by the forestry office,
+and Krückeberg would be obliged
+to commit himself at another
+location in the forest, for each poplar to be felled,
+to plant three sapling poles in return.
+     Nase  [<-- marginal note, written smaller; meaning unclear]
+                                  Maas, forestry official
+____
+
 |===
 
 
