--- a/modules/1237/pages/page1.adoc
+++ b/modules/1237/pages/page1.adoc
@@ -3,11 +3,7 @@
 
 image::001.png[link=self]
 
-[cols="a,a"]
-|===
-|Transliteration|Translation
-
-|
+.Transliteration
 [cols="1,7,2,2,2,1"]
 |===
 |Nrus |Designatio Actorum |Amt |Jahre |Monat |Tag
@@ -38,7 +34,7 @@ zu Berenbusch über einen Platz +
 zur Vergrößerung seines Gartens |||Dec |1
 |===
 
-|
+.Translation
 [cols="1,7,2,2,2,1"]
 |===
 |No. |Description of Records |Office |Year |Month |Day
@@ -69,7 +65,6 @@ for the colonist Krückeberg No. 10 +
 at Berenbusch, for a plot +
 to enlarge his garden |||Dec |1
 |=== 
-|===
 
 == Glossary of Terms
 
