--- a/modules/1237/pages/page2-other-text-1.adoc
+++ b/modules/1237/pages/page2-other-text-1.adoc
@@ -1,16 +1,6 @@
-[NOTE]
-====
-The smaller text, written in the margin to the right of the main proceedings,
-appears to be a set of trial honorific forms of address. These phrases—such as
-*"Durchlauchtigste Fürstin!"* and *"Hochgeborner Graf!"*—were likely drafted by
-the clerk to determine the proper formal salutation for official correspondence
-concerning the Krückeberg case. In 18th-century Schaumburg-Lippe, land-related
-petitions like this often required communication with or approval from the
-reigning Fürstin and possibly a Count, making correct titles and address
-formulas essential in any accompanying letters or rescripts.
-====
+== Page2, Other Text I
 
-
+== Transliteration
 [verse]
 ____
 Durchlauchtigste Fürstin!
@@ -22,6 +12,7 @@ Hochgeborner Graf!
 Gnädigst Regierender Graf und Herr
 ____
 
+== Translation
 
 [verse]
 ____
@@ -34,6 +25,17 @@ Highborn Count!
 Most Gracious Ruling Count and Lord
 ____
 
+[NOTE]
+====
+The smaller text, written in the margin to the right of the main proceedings,
+appears to be a set of trial honorific forms of address. These phrases—such as
+*"Durchlauchtigste Fürstin!"* and *"Hochgeborner Graf!"*—were likely drafted by
+the clerk to determine the proper formal salutation for official correspondence
+concerning the Krückeberg case. In 18th-century Schaumburg-Lippe, land-related
+petitions like this often required communication with or approval from the
+reigning Fürstin and possibly a Count, making correct titles and address
+formulas essential in any accompanying letters or rescripts.
+====
 
 == Glossary
 
