--- a/modules/1237/pages/page2-honorifics.adoc
+++ b/modules/1237/pages/page2-honorifics.adoc
@@ -3,7 +3,7 @@
 
 This text appears to the right of the main text of the proceedings. It is written much smaller.
 
-image::002-forms-of-address.png[link=self]
+image::002-honorifics.png[link=self]
 
 == Transliteration
 [verse]
