--- a/modules/1237/pages/page2-bottom-text.adoc
+++ b/modules/1237/pages/page2-bottom-text.adoc
@@ -1,22 +1,10 @@
-Nase
-an
-meinen
-Garten
-bragt
-auf der Gemein¬
-heit bey der Straaße
-eine
-schiebe Ecke Landes
-die unbebauet ist und
-mithin auch niemand
-enien
-Nutzen verschaft, wodurch über dem noch die
-Straaße umgal wird. Da dieselbe nun
-nahe
-en
-meinen Garten stoßt, so
-wünschte ich dieselben
-be
+Nase an meinen Garten bragt auf der Gemein-
+heit bey der Straaße eine schiebe Ecke Landes
+die unbebauet ist und mithin auch niemand
+enien Nutzen verschaft, wodurch über dem noch die
+Straaße [S/F]umgal wird. Da dieselbe nun nahe-
+en meinen Garten stoßt, so wünschte ich dieselben
+be 
 gern urbar zu machen und täuflich an mich
 zu bringen.
 An
@@ -51,7 +39,7 @@ Nutzen verschaft
 wodurch.
 über dem noch die
 Straaße
-nnegat,
+[S/F]nnegat,
 wird
 da
 dieselbe
@@ -76,4 +64,4 @@ Hochgräflichen Gnaden
 ergeher.
 daher
 men
-
+____
