--- a/modules/1237/pages/page2-bottom-text.adoc
+++ b/modules/1237/pages/page2-bottom-text.adoc
@@ -2,17 +2,39 @@
 
 image::002-1-bottom-small-text-2.png[link=self]
 
+Based on its content and style, this text is almost certainly written by Herr Krückeberg himself (or dictated by
+him and written in his name). Notice these expressions:
+* “Nahe an meinem Garten …” (Close to my garden)
+* “… so wünschte ich dieselbe gern urbar zu machen …” (I would like to bring it under cultivation)
+* “… an mich zu bringen.” (to acquire it for myself)
+
+Thus, this is clearly a first-person petition rather than administrative note by the Amt (office or bureau).
+
 .Transliteration
 [verse]
 ____
-Nahe an meinen Garten bragt auf der Gemein-
-heit beÿ der Straaße eine schiebe Ecke Landes
+Nahe an meinem Garten langt auf der Gemein-
+heit bey der Straße eine schiebe Ecke Landes,
 die unbebauet ist und mithin auch niemand
-enien Nutzen verschaft, wodurch über dem noch die
-Straaße [S/F]umga[l?] wird. Da dieselbe nun nahe-
-en meinen Garten stoßt, so wünschte ich diesel-
-be gern [?]urbar zu machen und täuflich an mich
+einen Nutzen verschaffet, wodurch über dem noch die
+Straße unegal wird. Da dieselbe nun nahe
+an meinen Garten stößt, so wünschte ich diesel-
+be gern urbar zu machen und täglich an mich
 zu bringen.
-An Ewr. Durchlauchten und her
+An Ewr. Durchlauchten und der
 Hochgräflichen Gnaden ergehet daher meine
+____
+
+.Translation
+[verse]
+____
+Close to my garden, on the common
+land by the road, there lies a wedge‑shaped corner of ground
+which is uncultivated and thus provides no benefit
+to anyone, whereby moreover the road
+becomes irregular. Since this piece adjoins
+my garden, I would like
+to bring it under cultivation and, if permitted, to acquire it for myself.
+To Your Serene Highness and to the
+High Comital Grace therefore goes my [petition/request].
 ____
