--- a/modules/1237/nav.adoc
+++ b/modules/1237/nav.adoc
@@ -2,6 +2,7 @@
 //NLA BU, K 2, A Nr. 1237
 * xref:cover.adoc[]
 * xref:page1.adoc[]
-* xref:page2.adoc[]
+* xref:page2-intro.adoc[]
+** xref:page2.adoc[]
 ** xref:page2-honorifics.adoc[]
 ** xref:page2-bottom-text.adoc[]
