--- a/modules/1237/pages/page2-intro.adoc
+++ b/modules/1237/pages/page2-intro.adoc
@@ -10,5 +10,5 @@ proceedings of the Amt. To the right of it, written in a smaller hand, are what 
 address, written as if to choose which to use, address to the Graf (count). Finally below the record of the proceedings are the
 words of Colon Krückeberg.
 
-Each area of text what extracted and a separate image of it created.
+Each area of text was extracted and a separate image of it created.
 
